<resources>
    <string name="app_name">Healthy App 2</string>
    <string name="create_new_user">Create New User</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="healthy_weight_tracker">Healthy Weight Tracker</string>
    <string name="create_an_account">Create An Account</string>
    <string name="userName">Name</string>
    <string name="requiredText">*Please enter in all fields*</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save_profile">Save Profile</string>
    <string name="scaleappleimage">ScaleAppleImage</string>
    <string name="enter_current_weight">Enter Current Weight</string>
    <string name="enter_goal_weight">Enter Goal Weight</string>
    <string name="loseWeight">LOSE</string>
    <string name="maintainWeight">MAINTAIN</string>
    <string name="clickPlanOption">TextView</string>
    <string name="gainWeight">GAIN</string>
    <string name="please_choose_an_goal_plan">*Please Choose an Goal Plan*</string>
    <string name="poundInputExample">e.g. 230 Ibs</string>
    <string name="currentWeightText">*Please Enter Current Weight*</string>
    <string name="currentWeightInputText">*Please Enter Current Weight*</string>
    <string name="goalWeightInputText">*Please Enter Goal Weight*</string>
    <string name="poundInput2">e.g. 205 Ibs</string>
    <string name="goalPlanInputText">*Please Choose A Goal Plan*</string>
    <string name="textGreeting">Hello</string>
    <string name="goalProgressText">Goal Progress</string>
    <string name="goalWeightText">TextView</string>
    <string name="historyInfo">History</string>
    <string name="graphInfo">Graph</string>
    <string name="settingsInfo">Settings</string>
    <string name="hello_again">Hello Again,</string>
    <string name="addItem">Click Here to Add Item</string>
    <string name="valueInput">Enter Value Here</string>
    <string name="click_here_to_delete_item">Click here to delete Item</string>
    <string name="textReminder">Would you like to receive text reminders?</string>
    <string name="phone_number">phone number</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="sms">SMS</string>
    <string name="topText">Let\'s Track</string>
    <string name="return_home">Return Home</string>
    <string name="profileHomeScreen">Profile</string>
    <string name="ex_205">Ex: 205</string>
    <string name="ex_2000">Ex: 2000</string>
    <string name="ex_700">Ex: 700</string>
    <string name="goalMetText">EX: Weight Goal Met!!!!!! CONGRATULATIONS</string>
    <string name="progress">Progress</string>
    <string name="change">change</string>
    <string name="add_data">ADD</string>
    <string name="date">date</string>
    <string name="SMS">SMS</string>
    <string name="delete">delete</string>
    <string name="weight">weight</string>
    <string name="delete_input">delete input</string>
    <string name="add_input">Add Input</string>
    <string name="sms_input">SMS Input</string>
    <string name="add">ADD</string>

</resources>