<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfd3fd"
    tools:context=".homeScreen">

        <Button
            android:id="@+id/SMS"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:text="@string/SMS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <Button
            android:id="@+id/remove"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/SMS"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <TextView
            android:id="@+id/mainDisplay"
            android:layout_width="262dp"
            android:layout_height="33dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Have you logged today?" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="85dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="144dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            android:textColorHint="#455A64"
            app:layout_constraintStart_toEndOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="84dp"
            android:layout_height="53dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="144dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:textColorHint="#455A64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <Button
            android:id="@+id/add_data"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/add"
            app:layout_constraintEnd_toStartOf="@+id/SMS"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <Button
            android:id="@+id/change"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="76dp"
            android:text="@string/change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplay" />

        <ListView
            android:id="@+id/weight_list"
            android:layout_width="378dp"
            android:layout_height="404dp"
            android:layout_marginTop="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>